--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -5,6 +5,7 @@ jobs:
   Build-Java-Application:
     runs-on: ubuntu-latest
     steps:
+      - name: Build Java Application
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
         with:
@@ -12,3 +13,5 @@ jobs:
           distribution: 'oracle'
           cache: maven
       - run: mvn -B package -DskipTests
+      - name: Build Docker Image
+      - run: docker build -t my-docker-image .
