--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -5,13 +5,15 @@ jobs:
   Build-Java-Application:
     runs-on: ubuntu-latest
     steps:
-      - name: Build Java Application
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Java 17
+        uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'oracle'
           cache: maven
-      - run: mvn -B package -DskipTests
+      - name: Build Java Application
+        run: mvn -B package -DskipTests
       - name: Build Docker Image
-      - run: docker build -t my-docker-image .
+        run: docker build -t my-docker-image .
