--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -21,7 +21,7 @@ jobs:
         run: mvn -B package -DskipTests
       - name: Build Docker Image
         run: docker build -t my-docker-image .
-      - id: "auth"
+      - name: "auth"
           uses: "google-github-actions/auth@v1"
           with:
             credentials_json: "${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}"
