[CS-22] Add docker images step

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -32,5 +32,7 @@ jobs:
       - name: Docker auth
         run: |-
           gcloud auth configure-docker ${{ env.REGION }}-docker.pkg.dev --quiet
+      - name: Show images
+        run: docker images
       - name: Push image
         run: docker push ${{ env.GAR_LOCATION }}
