--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -22,11 +22,11 @@ jobs:
       - name: Build Docker Image
         run: docker build -t call-sign-telegram-bot .
       - name: auth
-        uses: google-github-actions/auth@v1
+        uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
       - name: Set up Cloud SDK
-        uses: google-github-actions/setup-gcloud@v1
+        uses: google-github-actions/setup-gcloud@v2
       - name: Use gcloud CLI
         run: gcloud info
       - name: Docker auth
@@ -34,5 +34,8 @@ jobs:
           gcloud auth configure-docker ${{ env.REGION }}-docker.pkg.dev --quiet
       - name: Show images
         run: docker images
+      - name: Tag image
+        run: docker tag call-sign-telegram-bot ${{ env.GAR_LOCATION }}
       - name: Push image
         run: docker push ${{ env.GAR_LOCATION }}
+        # run: docker push ${{ env.GAR_LOCATION }}
