--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -2,9 +2,11 @@ name: GitHub Actions Build
 run-name: Build java application then create docker image
 on: [push]
 env:
-  PROJECT_ID: transceivers-collection
-  REGION: europe-central2
-  GAR_LOCATION: europe-central2-docker.pkg.dev/transceivers-collection/k2callsign-images/call-sign-telegram-bot
+  IMAGE_NAME: call-sign-telegram-bot
+  GCP_PROJECT_ID: transceivers-collection
+  GCP_REPOSITORY: k2callsign-images
+  GCP_REGION: europe-central2
+  GCP_LOCATION: ${{env.GCP_REGION}}-docker.pkg.dev/${{env.GCP_PROJECT_ID}}/${{env.GCP_REPOSITORY}}/${{env.IMAGE_NAME}}
 jobs:
   Build-Java-Application:
     runs-on: ubuntu-latest
@@ -20,7 +22,7 @@ jobs:
       - name: Build Java Application
         run: mvn -B package -DskipTests
       - name: Build Docker Image
-        run: docker build -t call-sign-telegram-bot .
+        run: docker build -t ${{env.IMAGE_NAME}} .
       - name: auth
         uses: google-github-actions/auth@v2
         with:
@@ -31,11 +33,10 @@ jobs:
         run: gcloud info
       - name: Docker auth
         run: |-
-          gcloud auth configure-docker ${{ env.REGION }}-docker.pkg.dev --quiet
+          gcloud auth configure-docker ${{env.GCP_REGION}}-docker.pkg.dev --quiet
       - name: Show images
         run: docker images
       - name: Tag image
-        run: docker tag call-sign-telegram-bot ${{ env.GAR_LOCATION }}
+        run: docker tag ${{IMAGE_NAME}} ${{env.GCP_LOCATION}}
       - name: Push image
-        run: docker push ${{ env.GAR_LOCATION }}
-        # run: docker push ${{ env.GAR_LOCATION }}
+        run: docker push ${{env.GCP_LOCATION}}
