CS-28: Add send congrats msg on dmrid registered

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,5 +13,6 @@ bot:
   name: ${BOT_NAME}
   token: ${BOT_TOKEN}
   chat: ${BOT_CHAT}
+  thread: ${BOT_THREAD}
   api: https://api.telegram.org/
   hook: https://call-sign.transceivers.ninja/
